--- a/timeTracker.html
+++ b/timeTracker.html
@@ -15,6 +15,7 @@
 
     <div class="wrapper" id="wrapper">
 
+
         <div class="headingContainer">
             <div class="headingSubContainer">
                 <div class='headingSubContLeft'>
@@ -23,13 +24,16 @@
                     <h1>PATRICKS TIMETRACKER</h1>
                 </div>
                 <div class='headingSubContRight'>
-
                     <input type="image" src="./images/floppy.png" alt="floppy.png" height="50px" onclick="savePage()">
                 </div>
             </div>
         </div>
 
+
         <div class="rowHeader">
+            <div class="rowHeaderLeft">
+                <input type="image" src="./images/pencil.png" alt="pencil.png" height="20px" onclick="editTitle()">
+            </div>
             <div class="rowHeaderTag1">
                 <h3 id="header1"> Project #</h3>
             </div>
@@ -42,7 +46,11 @@
             <div class="rowHeaderTag4">
                 <h3 id="header4"> Time</h3>
             </div>
+            <div class="rowHeaderRight">
+            </div>
         </div>
+
+
         <div class="row" id="row0">
             <div class="button">
                 <input type="checkbox" class="checkBox" id="checkbox" value="Checkbox" onclick="checkBox(this);">
